tests/chapter_12/invalid_parse/bad_specifiers_2.c
int main(void) {
    /* Can't include the same specifier twice */
    unsigned LONG64 unsigned i = 0;
    return 0;
}